tests/fixtures/invalid/pow_float_none_dict.py
# Cannot call pow() with Float, None, Dict[str, int]
x = pow(1.0, None, {"a": 1})
